Testing US503Task516 integrated with dev

--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -34,13 +34,21 @@
       <div class="content-container">
         <div class="about-container">
           <div class="team-member">
-            <div class="pfp-container">
-              <img
-                src="../assets/images/user.png"
-                alt="anonymous pfp"
-                class="pfp-icon"
-              />
-            </div>
+            <!-- <div class="pfp-container"> -->
+            <!--   <img -->
+            <!--     src="../assets/images/astronaut.png" -->
+            <!--     <!-- src="../assets/images/user.png" -->
+            <!--     alt="anonymous pfp" -->
+            <!--     class="pfp-icon" -->
+            <!--   /> -->
+            <!-- </div> -->
+            <div
+              class="pfp-container"
+              style="
+                background-image: url(&quot;../assets/images/astronaut.png&quot;);
+                background-size: cover;
+              "
+            ></div>
             <div class="name-container">
               <div class="role">Full-Stack Software Engineer</div>
               <div class="name">Ryan Dinville</div>
@@ -148,6 +156,20 @@
               <li>NASA/JPL-Caltech: Psyche Magnetometer</li>
               <li>NASA/JPL-Caltech: Radio Science</li>
               <li>NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)</li>
+            </ul>
+          </div>
+          <div class="citation-section-title">Icons:</div>
+          <div class="citation-section">
+            <ul>
+              <li>flaticon: Astronaut Icon</li>
+              <li>
+                <a
+                  href="https://www.flaticon.com/free-icons/professions-and-jobs"
+                  title="professions and jobs icons"
+                  >Professions and jobs icons created by Iconic Panda -
+                  Flaticon</a
+                >
+              </li>
             </ul>
           </div>
           <div class="citation-section-title">Other:</div>
